[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dash-cytoscape>=1.0.2",
    "igraph>=0.11.9",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "reportlab>=4.4.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "streamlit>=1.46.0",
    "weasyprint>=65.1",
]
